src/objects/CostCentre_Location__c.object
<CustomObject>
    <fields>
        <fullName>Cost_Centre__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cost Centre</label>
        <referenceTo>Cost_Centre__c</referenceTo>
        <relationshipLabel>Cost Centre Property</relationshipLabel>
        <relationshipName>R00N70000002GpfDEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Cost Centre Property</relationshipLabel>
        <relationshipName>R00N70000002GpfIEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Cost Centre Property</label>
    <nameField>
        <displayFormat>CCLOC{0}</displayFormat>
        <label>CostCentre_Location Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost Centre Property</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>